<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_80"
    android:orientation="vertical" >

<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:background="@android:color/transparent">
	    <TextView 
	        android:id="@+id/dlg_title_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_alignParentLeft="true"
	        android:text="@string/home_tile_help"
	        android:textSize="50sp"
	        android:textColor="@color/white"
	        android:layout_marginLeft="@dimen/padding_medium"
	        android:layout_marginTop="@dimen/padding_medium"/>
	    <Button 
	        android:id="@+id/dlg_close_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/undefined"
	        android:textColor="@color/white"
	        android:layout_alignParentTop="true"
	        android:layout_alignParentRight="true"
	        android:layout_marginTop="@dimen/padding_medium"
	        android:layout_marginRight="@dimen/padding_medium"/>
	
	</RelativeLayout>    
    	<!-- 
    <fragment
        android:id="@+id/dlg_hire_period_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        class="com.greatguide.ui.fragment.DialogTitleFragment"
        tools:layout="@layout/fragment_dlg_title_row" />
	 -->
    
    <TextView 
        android:id="@+id/dlg_help_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_large"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginBottom="@dimen/padding_medium"
        android:layout_marginRight="@dimen/padding_medium"
        android:text="@string/dlg_tech_help_label"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:gravity="left|top"
        />
    <TextView 
        android:id="@+id/dlg_help_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginBottom="@dimen/padding_medium"
        android:layout_marginRight="@dimen/padding_medium"
        android:text="@string/dlg_tech_help_telephone"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:gravity="left|top"
        />
    <TextView 
        android:id="@+id/dlg_help_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginBottom="@dimen/padding_medium"
        android:layout_marginRight="@dimen/padding_medium"
        android:text="@string/dlg_tech_help_url"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:gravity="left|top"
        />
    <TextView 
        android:id="@+id/dlg_help_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginBottom="@dimen/padding_large"
        android:layout_marginRight="@dimen/padding_medium"
        android:text="@string/dlg_tech_help_email"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:gravity="left|top"
        />
    <TextView 
        android:id="@+id/dlg_help_taxi_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginTop="@dimen/padding_large"
        android:layout_marginRight="@dimen/padding_medium"
        android:text="@string/dlg_tech_help_local_taxi_label"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:gravity="left|top"
        />
    <TextView 
        android:id="@+id/dlg_help_taxi_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginBottom="@dimen/padding_medium"
        android:layout_marginRight="@dimen/padding_medium"
        android:text="@string/dlg_tech_help_local_taxi_telephone"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:gravity="left|top"
        />

</LinearLayout>