<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/setup_activate_device_tile"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/padding_medium"
        android:background="@color/setup_tile"
        android:clickable="true"
        android:onClick="onActiveDeviceClicked"
        android:gravity="left|bottom"
        android:padding="@dimen/padding_small"
        android:text="@string/setup_activate_device"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/setup_reset_tours_tile"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/padding_medium"
        android:background="@color/setup_tile"
        android:clickable="true"
        android:onClick="onResetToursClicked"
        android:gravity="left|bottom"
        android:padding="@dimen/padding_small"
        android:text="@string/setup_reset_tours"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/setup_device_setup_tile"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/padding_medium"
        android:background="@color/setup_tile"
        android:clickable="true"
        android:onClick="onDeviceSetupClicked"
        android:gravity="left|bottom"
        android:padding="@dimen/padding_small"
        android:text="@string/setup_device_setup"
        android:textColor="@color/white"
        android:textSize="24sp" />

</LinearLayout>