<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_home_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" 
        android:orientation="vertical"
        android:layout_margin="@dimen/padding_medium"
        >

        <LinearLayout
            android:id="@+id/home_hiredate_tile"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="@dimen/padding_medium"
            android:layout_marginRight="@dimen/padding_small"
            android:orientation="vertical"
            android:background="@color/hire_tile" 
            android:onClick="onHirePeriodClicked"
            android:clickable="true">
            <TextView 
                android:id="@+id/home_date"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
	            android:textSize="50sp"
	            android:textColor="@color/white"
	            android:gravity="top|left"
	            android:paddingTop="@dimen/padding_medium"
	            android:paddingLeft="@dimen/padding_medium"
	            android:duplicateParentState="true"/>
            <TextView 
                android:id="@+id/home_hire_period_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/home_tile_hire_period"
	            android:textSize="24sp"
	            android:textColor="@color/white"
	            android:paddingLeft="@dimen/padding_medium"
	            android:duplicateParentState="true"/>
            <TextView 
                android:id="@+id/home_hire_period"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
	            android:textSize="24sp"
	            android:textColor="@color/white"
	            android:gravity="bottom|left"
	            android:paddingBottom="@dimen/padding_medium"
	            android:paddingLeft="@dimen/padding_medium"
	            android:duplicateParentState="true"/>
            </LinearLayout>
        <TextView
            android:id="@+id/home_rules_tile"
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:layout_alignTop="@+id/home_hiredate_tile"
            android:layout_alignBottom="@+id/home_hiredate_tile"
            android:layout_toRightOf="@+id/home_hiredate_tile"
            android:layout_marginLeft="@dimen/padding_small"
            android:background="@color/rules_tile"
            android:text="@string/home_tile_rules"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:gravity="bottom|left"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_medium" 
            android:onClick="onRulesClicked"
            android:clickable="true"/>
        <TextView
            android:id="@+id/home_setup_tile"
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:layout_alignTop="@+id/home_hiredate_tile"
            android:layout_alignBottom="@+id/home_hiredate_tile"
            android:layout_toRightOf="@+id/home_rules_tile"
            android:layout_marginLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium"
            android:background="@color/setup_tile"
            android:text="@string/home_tile_setup"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:gravity="bottom|left"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_medium" 
            android:onClick="onSetupClicked"
            android:clickable="true"/>
        <TextView
            android:id="@+id/home_setup_tile_padding"
            android:layout_width="@dimen/padding_medium"
            android:layout_height="0dp"
            android:layout_alignTop="@+id/home_setup_tile"
            android:layout_alignBottom="@+id/home_setup_tile"
            android:layout_toRightOf="@+id/home_setup_tile"
            android:layout_marginLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium"
            android:background="@android:color/transparent"
            android:gravity="bottom|left"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_medium"/>
        <TextView
            android:id="@+id/home_tours_tile"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_alignLeft="@+id/home_hiredate_tile"
            android:layout_alignRight="@+id/home_hiredate_tile"
            android:layout_below="@+id/home_hiredate_tile"
            android:layout_marginBottom="@dimen/padding_medium"
            android:background="@color/tours_tile" 
            android:text="@string/title_tours"
            android:textSize="50sp"
            android:textColor="@color/white"
            android:gravity="bottom|left"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_medium"
            android:onClick="onToursClicked"
            android:clickable="true" />
        <TextView
            android:id="@+id/home_intro_tile"
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:layout_alignLeft="@+id/home_rules_tile"
            android:layout_alignRight="@+id/home_rules_tile"
            android:layout_alignTop="@+id/home_tours_tile"
            android:layout_alignBottom="@+id/home_tours_tile"
            android:layout_toRightOf="@+id/home_tours_tile"
            android:layout_below="@+id/home_rules_tile"
            android:background="@color/intro_tile"
            android:text="@string/home_tile_intro"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:gravity="bottom|left"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_medium" />
        
        <LinearLayout 
            android:id="@+id/home_bottom_tiles"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_alignLeft="@+id/home_hiredate_tile"
            android:layout_alignRight="@+id/home_hiredate_tile"
            android:layout_below="@+id/home_tours_tile"
            android:weightSum="2"
            android:orientation="horizontal">
	        <TextView
	            android:id="@+id/home_help_tile"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:layout_marginRight="@dimen/padding_small"
	            android:background="@color/help_tile"
	            android:text="@string/home_tile_help"
	            android:textSize="24sp"
	            android:textColor="@color/white"
	            android:gravity="bottom|left"
	            android:paddingBottom="@dimen/padding_medium"
	            android:paddingLeft="@dimen/padding_medium"
	            android:onClick="onHelpClicked"
	            android:clickable="true" />
	        <TextView
	            android:id="@+id/home_returns_tile"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:layout_marginLeft="@dimen/padding_small"
	            android:background="@color/returns_tile" 
	            android:text="@string/home_tile_returns"
	            android:textSize="24sp"
	            android:textColor="@color/white"
	            android:gravity="bottom|left"
	            android:paddingBottom="@dimen/padding_medium"
	            android:paddingLeft="@dimen/padding_medium"
	            android:onClick="onReturnsClicked"
	            android:clickable="true"/>
        </LinearLayout>
    </RelativeLayout>
</HorizontalScrollView>